--- a/themes/basic/templates/article.html
+++ b/themes/basic/templates/article.html
@@ -16,10 +16,6 @@
 {% endblock %}
 
 {% block content %}
-{% for article in dates %}
-{{article.date}}
-{% endfor %}
-
 <section id="content" class="body">
   <header>
     <h2 class="entry-title">
@@ -29,17 +25,29 @@
  {{ translations.translations_for(article) }}
   </header>
   <footer class="post-info">
-    <abbr class="published" title="{{ article.date.isoformat() }}">
-      {{ article.locale_date }}
-    </abbr>
-    {% if article.author %}
-    <address class="vcard author">
-      By <a class="url fn" href="{{ SITEURL }}/{{ article.author.url }}">{{ article.author }}</a>
-    </address>
-    {% endif %}
+    <ul>
+      <li><abbr class="published" title="{{ article.date.isoformat() }}">{{ article.locale_date }}</abbr></li>
+      <li><a href="{{ GITHUB_REPOSITORY }}blob/master/content/{{ article.get_relative_source_path() }}">Source</a></li>
+    </ul>
   </footer><!-- /.post-info -->
   <div class="entry-content">
     {{ article.content }}
   </div><!-- /.entry-content -->
+
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'co3k-org'; // required: replace example with your forum shortname
+        var disqus_url = window.location.href.replace('.html', '');
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 </section>
 {% endblock %}
