added jQuery since coderwall badge dependent on

--- a/themes/basic/templates/base.html
+++ b/themes/basic/templates/base.html
@@ -32,6 +32,8 @@
         <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
         <link rel="shortcut icon" href="{{ SITEURL }}/theme/favicon.ico" />
+
+        <script type="text/javascript" src="{{ SITEURL }}/theme/js/jquery-1.10.2.min.js"></script>
         {% endblock head %}
 </head>
 
