--- a/themes/basic/templates/index.html
+++ b/themes/basic/templates/index.html
@@ -8,13 +8,14 @@
 {% block head %}
 {{ super() }}
    <link href="http://coderwall.com/stylesheets/jquery.coderwall.css" media="all" rel="stylesheet" type="text/css">
-   <script src="http://coderwall.com/javascripts/jquery.coderwall.js"></script>
 {% endblock %}
 
 <img alt="A photo of Kousuke Ebihara" src="/images/co3k.jpg" />
 <p>Hi, my name is Kousuke Ebihara (海老原昂輔 / a.k.a. co3k). I'm a software developer living in Tokyo, Japan. I was born on April 23, 1988.</p>
 <p>I currently work full-time at <a class="reference external" href="http://tejimaya.com/">Tejimaya, inc. (株式会社手嶋屋)</a>. Of course I take full responsibility for the wording and content of this site.</p>
-<section class="coderwall" data-coderwall-username="ebihara" data-coderwall-orientation="horizontal"></section><div class="section" id="involved-open-source-projects-main">
+<section class="coderwall" data-coderwall-username="ebihara" data-coderwall-orientation="horizontal"></section>
+<script src="http://coderwall.com/javascripts/jquery.coderwall.js"></script>
+<div class="section" id="involved-open-source-projects-main">
 <h2>Involved open source projects (main)</h2>
 <ul>
 <li><p class="first"><a class="reference external" href="http://pear.php.net/package/VersionControl_Git">PEAR::VersionControl_Git</a></p>
