--- a/themes/basic/templates/article.html
+++ b/themes/basic/templates/article.html
@@ -12,8 +12,9 @@
   {% for tag in article.tags %}
     <meta name="tags" contents="{{tag}}" />
   {% endfor %}
-
 {% endblock %}
+
+{% block title %}{{ super() }} - Blog - {{ article.title|striptags }}{% endblock %}
 
 {% block content %}
 <section id="content" class="body">
