--- a/themes/basic/templates/base.html
+++ b/themes/basic/templates/base.html
@@ -74,10 +74,13 @@
         </section>
 
         <footer id="contentinfo" class="body">
-                <address id="about" class="vcard body">
-                Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
-                which takes great advantage of <a href="http://python.org">Python</a>.
-                </address><!-- /#about -->
+            <p>Copyright &copy; 2013 Kousuke Ebihara All Rights Reserved.</p>
+            <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />The content of this site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</p>
+
+             <address id="about" class="vcard body">
+             Powered by <a href="http://getpelican.com/">Pelican</a>,
+             which takes great advantage of <a href="http://python.org">Python</a>.
+             </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 
         <script type="text/javascript" src="{{ SITEURL }}/theme/js/background.js"></script>
