changed style for prohibition of Japanese text

--- a/themes/basic/static/css/style.css
+++ b/themes/basic/static/css/style.css
@@ -3,7 +3,8 @@
 body {
   background-color: #fff;
   color: #333;
-  word-break: break-all;
+  word-break: normal;
+  word-wrap: break-word;
 }
 
 body a {
