replaced my GitHub username to co3k

--- a/themes/basic/templates/index.html
+++ b/themes/basic/templates/index.html
@@ -58,7 +58,7 @@
 <dt>Twitter</dt>
 <dd><a class="reference external" href="http://twitter.com/co3k/">&#64;co3k</a></dd>
 <dt>GitHub</dt>
-<dd><a class="reference external" href="http://github.com/ebihara/">ebihara</a></dd>
+<dd><a class="reference external" href="http://github.com/co3k/">co3k</a></dd>
 <dt>うたスキ (Japanese karaoke portal site)</dt>
 <dd><a class="reference external" href="http://joysound.com/ex/utasuki/userpage/_usr_76efb68a0fdd50ad5ec8e26d811cb7280ac6_index.htm">http://joysound.com/ex/utasuki/userpage/_usr_76efb68a0fdd50ad5ec8e26d811cb7280ac6_index.htm</a></dd>
 <dt>ブクログ (Japanese sharing one's bookshelf site)</dt>
