--- a/themes/basic/templates/index.html
+++ b/themes/basic/templates/index.html
@@ -13,7 +13,7 @@
 <img alt="A photo of Kousuke Ebihara" src="/images/co3k.jpg" />
 
 <p>Hi, my name is Kousuke Ebihara (海老原昂輔 / a.k.a. co3k). I'm a software developer living in Tokyo, Japan. I was born on April 23, 1988.</p>
-<p>I currently work full-time at <a class="reference external" href="http://tejimaya.com/">Tejimaya, inc. (株式会社手嶋屋)</a>. Of course I take full responsibility for the wording and content of this site.</p>
+<p>I currently work full-time at <a class="reference external" href="http://voyagegroup.com/">VOYAGE GROUP, Inc.</a>. Of course I take full responsibility for the wording and content of this site.</p>
 <div>
 
 <div class="section" id="involved-open-source-projects-main">
