--- a/themes/basic/templates/index.html
+++ b/themes/basic/templates/index.html
@@ -59,6 +59,8 @@
 <dd><a class="reference external" href="http://twitter.com/co3k/">&#64;co3k</a></dd>
 <dt>GitHub</dt>
 <dd><a class="reference external" href="http://github.com/co3k/">co3k</a></dd>
+<dt>Amazon Wish List</dt>
+<dd><a class="reference external" href="http://www.amazon.co.jp/registry/wishlist/1GIM0XIVVGUE4">http://www.amazon.co.jp/registry/wishlist/1GIM0XIVVGUE4</a></dd>
 <dt>うたスキ (Japanese karaoke portal site)</dt>
 <dd><a class="reference external" href="http://joysound.com/ex/utasuki/userpage/_usr_76efb68a0fdd50ad5ec8e26d811cb7280ac6_index.htm">http://joysound.com/ex/utasuki/userpage/_usr_76efb68a0fdd50ad5ec8e26d811cb7280ac6_index.htm</a></dd>
 <dt>ブクログ (Japanese sharing one's bookshelf site)</dt>
