--- a/themes/basic/templates/index.html
+++ b/themes/basic/templates/index.html
@@ -13,39 +13,20 @@
 <img alt="A photo of Kousuke Ebihara" src="/images/co3k.jpg" />
 
 <p>Hi, my name is Kousuke Ebihara (海老原昂輔 / a.k.a. co3k). I'm a software developer living in Tokyo, Japan. I was born on April 23, 1988.</p>
-<p>I currently work full-time at <a class="reference external" href="http://voyagegroup.com/">VOYAGE GROUP, Inc.</a>. Of course I take full responsibility for the wording and content of this site.</p>
+<p>I currently work full-time at <a class="reference external" href="http://voyagegroup.com/">VOYAGE GROUP, Inc.</a> Of course I take full responsibility for the wording and content of this site.</p>
 <div>
 
-<div class="section" id="involved-open-source-projects-main">
-<h2>Involved open source projects (main)</h2>
-<ul>
-<li><p class="first"><a class="reference external" href="http://pear.php.net/package/VersionControl_Git">PEAR::VersionControl_Git</a></p>
-</li>
-<li><dl class="first docutils">
-<dt><a class="reference external" href="http://www.openpne.jp/">OpenPNE [ja]</a> (inactive)</dt>
-<dd><ul class="first last simple">
-<li>My first contributing to OpenPNE was in 2005, I was17</li>
-<li>Creator and lead of OpenPNE 3 (and many its plugins)</li>
-</ul>
-</dd>
-</dl>
-</li>
-</ul>
-</div>
 <div class="section" id="projects-use-my-contributed-code">
 <h2>Projects use my contributed code</h2>
 <ul class="simple">
+<li><a class="reference external" href="http://www.openpne.jp/">OpenPNE [ja]</a></li>
+<li><a class="reference external" href="http://pear.php.net/package/VersionControl_Git">PEAR::VersionControl_Git</a></li>
 <li><a class="reference external" href="http://www.symfony-project.org/">symfony</a></li>
 <li><a class="reference external" href="http://symfony.com/">Symfony2</a></li>
 <li><a class="reference external" href="http://www.doctrine-project.org/">Doctrine</a></li>
-<li><a class="reference external" href="http://pear.chiaraquartet.net/index.php?package=Chiara_PEAR_Serve">Chiara_PEAR_Server</a></li>
-<li><a class="reference external" href="https://code.google.com/p/touchegg/">Touchégg</a></li>
+<li><a class="reference external" href="https://github.com/interagent/prmd">prmd</a></li>
+<li><a class="reference external" href="https://github.com/grpc-ecosystem/grpc-gateway">grpc-gateway</a></li>
 </ul>
-<h2>Coderwall Badges</h2>
-<section id="coderwall-badges">
-<p><a href="https://coderwall.com/ebihara">https://coderwall.com/ebihara</a></p>
-</section>
-</div>
 <div class="section" id="published-books">
 <h2>Published books</h2>
 <a class="reference external image-reference" href="http://www.amazon.co.jp/exec/obidos/ASIN/4798029343/"><img alt="symfony-1-4によるWebアプリケーション開発―オープンソース徹底活用" src="http://ecx.images-amazon.com/images/I/51TqK-ZdqCL._SX160__PC_.jpg" /></a>
@@ -54,7 +35,7 @@
 <h2>Contact information</h2>
 <dl class="docutils">
 <dt>E-mail</dt>
-<dd><a class="reference external" href="mailto:kousuke&#64;co3k.org">kousuke&#64;co3k.org</a> (<a class="reference external" href="https://raw.github.com/gist/1395344/co3k.asc">GPG public key</a>)</dd>
+<dd><a class="reference external" href="mailto:kousuke&#64;co3k.org">kousuke&#64;co3k.org</a></dd>
 <dt>Twitter</dt>
 <dd><a class="reference external" href="http://twitter.com/co3k/">&#64;co3k</a></dd>
 <dt>GitHub</dt>
@@ -63,8 +44,6 @@
 <dd><a class="reference external" href="http://www.amazon.co.jp/registry/wishlist/1GIM0XIVVGUE4">http://www.amazon.co.jp/registry/wishlist/1GIM0XIVVGUE4</a></dd>
 <dt>うたスキ (Japanese karaoke portal site)</dt>
 <dd><a class="reference external" href="http://joysound.com/ex/utasuki/userpage/_usr_76efb68a0fdd50ad5ec8e26d811cb7280ac6_index.htm">http://joysound.com/ex/utasuki/userpage/_usr_76efb68a0fdd50ad5ec8e26d811cb7280ac6_index.htm</a></dd>
-<dt>ブクログ (Japanese sharing one's bookshelf site)</dt>
-<dd><a class="reference external" href="http://booklog.jp/users/co3k">http://booklog.jp/users/co3k</a></dd>
 </dl>
 </div>
 <div class="section" id="a-collection-of-did-you-mean-kousuke-ebihara">
