--- a/themes/basic/templates/base.html
+++ b/themes/basic/templates/base.html
@@ -34,14 +34,12 @@
         <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
         <link rel="shortcut icon" href="{{ SITEURL }}/theme/favicon.ico" />
-
-        <script type="text/javascript" src="{{ SITEURL }}/theme/js/jquery-1.10.2.min.js"></script>
         {% endblock head %}
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="{{ SITEURL }}">{{ SITENAME }} <strong>{{ SITESUBTITLE }}</strong></a></h1>
+                <h1><a href="/">{{ SITENAME }} <strong>{{ SITESUBTITLE }}</strong></a></h1>
         <nav id="menu"><ul>
         {% for title, link in MENUITEMS %}
             <li><a href="{{ link }}">{{ title }}</a></li>
@@ -77,7 +75,7 @@
 
         <footer id="contentinfo" class="body">
             <p>Copyright &copy; 2013 Kousuke Ebihara All Rights Reserved.</p>
-            <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />The content of this site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</p>
+            <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by-sa/3.0/88x31.png" /></a><br />The content of this site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</p>
 
              <address id="about" class="vcard body">
              Powered by <a href="http://getpelican.com/">Pelican</a>,
