--- a/themes/basic/templates/base.html
+++ b/themes/basic/templates/base.html
@@ -77,6 +77,8 @@
             <p>Copyright &copy; 2013 Kousuke Ebihara All Rights Reserved.</p>
             <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by-sa/3.0/88x31.png" /></a><br />The content of this site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</p>
 
+            <p><a href="/#privacy-policy">プライバシーポリシー</a></p>
+
              <address id="about" class="vcard body">
              Powered by <a href="http://getpelican.com/">Pelican</a>,
              which takes great advantage of <a href="http://python.org">Python</a>.
@@ -84,5 +86,15 @@
         </footer><!-- /#contentinfo -->
 
         <script type="text/javascript" src="{{ SITEURL }}/theme/js/background.js"></script>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-27311029-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-27311029-1');
+        </script>
 </body>
 </html>
