--- a/themes/basic/templates/index.html
+++ b/themes/basic/templates/index.html
@@ -15,6 +15,13 @@
 <p>I currently work full-time at <a class="reference external" href="http://voyagegroup.com/">VOYAGE GROUP, Inc.</a> Of course I take full responsibility for the wording and content of this site.</p>
 <div>
 
+<div class="section" id="privacy-policy">
+  <h2>プライバシーポリシー</h2>
+  <p>このサイトでは Google Analytics を用いて、本サイトにおける訪問者の行動データを収集しています。この目的を達成するためにファーストパーティ cookie を発行しています。これによってユニークユーザを識別することが可能ですが、もっぱらユニークユーザ数を算出する用途のみに使い、ユーザーエージェントやその他の情報との関連付けはおこなっていません。したがって本サイトの運営者たる海老原昂輔には、この cookie 情報を直接的あるいは間接的に用いて、訪問者個人を特定することは技術的にできません。また、この情報は米国の Google 社のサーバ上に蓄積されますが、蓄積された本サイトの訪問者の情報は <a href="http://www.google.com/analytics/terms/jp.html"> Google Analytics の利用規約</a> に基づき扱われているようです。</p>
+  <p>また、 Google Analytics 上に蓄積された訪問者の情報は、 14 ヶ月をもって削除されるように設定しています。ただし、実際にその削除作業をおこなうのは Google 社であり海老原昂輔ではありません。もし削除されていない疑いがあるようでしたらご連絡ください。</p>
+  <p>それから本サイトは EU 加盟国に対してサービスを提供することを意図していませんが、 EU 加盟国から本サイトを利用されることまでは妨げません。 GDPR (General Data Protection Regulation) については充分に尊重するものの、配慮が不充分である可能性をあまり否定しません。もし GDPR に抵触する疑いがある場合はご連絡ください。</p>
+</div>
+
 <div class="section" id="projects-use-my-contributed-code">
 <h2>Projects use my contributed code</h2>
 <ul class="simple">
